--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 
 <body style="width:85%; margin:auto;">
-
+  <h2>Geo-visualisation of Earthquake data from USGS Earthquake Catalogue</h2>
+ <p>I have chosen to visualize the earthquakes happening over a period of 48 hours (to grasp the sheer number of earthquakes happening over such a small time frame). The start and end time of the data set were from 2004-12-25 (00:00:00) to 2004-12-26 (23:59:59). This specific time was chosen to get a data set which had earthquakes of all magnitudes (9.1 magnitude earthquake took place in Sumatra on 26th December, 2004).</p>
   <div class="flourish-embed" data-src="visualisation/846264"></div><script src="https://public.flourish.studio/resources/embed.js"></script>
 
 </body>
